--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -2,7 +2,7 @@
 log4j.rootLogger=DEBUG, stdout
 
 # MyBatis logging configuration...
-log4j.logger.cn.edu.tju.rico.mapper.UserMapper=DEBUG
+log4j.logger.cn.com.med.info.mapper.UserMapper=DEBUG
 
 # Console output...
 # 日志输出位置设置
