--- a/medicineInfo_rest/src/main/resources/application.properties
+++ b/medicineInfo_rest/src/main/resources/application.properties
@@ -3,3 +3,6 @@ cors.filter.allowMethods=GET,POST,PUT,DELETE,OPTIONS
 cors.filter.allowCredentials=true
 cors.filter.allowHeaders=Content-Type,X-Token
 cors.filter.exposeHeaders=
+
+
+web.filter.no.token.urls=/tokens
