--- a/medicineInfo_rest/src/main/resources/application.properties
+++ b/medicineInfo_rest/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+app.name=medicineInfo
 cors.filter.allowOrigin=http://localhost:8080
 cors.filter.allowMethods=GET,POST,PUT,DELETE,OPTIONS
 cors.filter.allowCredentials=true
