--- a/medicineInfo_rest/src/main/resources/application.yml
+++ b/medicineInfo_rest/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
         name: test
         url: jdbc:mysql://localhost:3306/miss?characterEncoding=UTF-8&autoReconnect=true&zeroDateTimeBehavior=convertToNull&useUnicode=true&useSSL=false
         username: root
-        password: root
+        password: 123456
         # 使用druid数据源
         type: com.alibaba.druid.pool.DruidDataSource
         driver-class-name: com.mysql.jdbc.Driver
