伴随表结构修改更新dao层mapper

--- a/medicineInfo_dao/src/main/resources/mysql/mysql.properties
+++ b/medicineInfo_dao/src/main/resources/mysql/mysql.properties
@@ -1,3 +1,3 @@
-jdbc.url=jdbc:mysql://148.70.0.139:3306/miss
+jdbc.url=jdbc:mysql://localhost:3306/miss
 jdbc.username=root
-jdbc.password=123456
+jdbc.password=admin
