--- a/medicineInfo_rest/src/main/resources/application.yml
+++ b/medicineInfo_rest/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
 spring:
     datasource:
         name: test
-        url: jdbc:mysql://localhost:3306/miss?characterEncoding=UTF-8&autoReconnect=true&zeroDateTimeBehavior=convertToNull&useUnicode=true&useSSL=false
+        url: jdbc:mysql://148.70.0.139:3306/miss?characterEncoding=UTF-8&autoReconnect=true&zeroDateTimeBehavior=convertToNull&useUnicode=true&useSSL=false
         username: root
         password: 123456
         # 使用druid数据源
