--- a/medicineInfo_rest/src/main/resources/application.properties
+++ b/medicineInfo_rest/src/main/resources/application.properties
@@ -6,4 +6,4 @@ cors.filter.allowHeaders=Content-Type,X-Token
 cors.filter.exposeHeaders=
 
 
-web.filter.no.token.urls=/tokens
+web.filter.no.token.urls=/tokens,/mission/saveMission
