--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,13 @@
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/com.aliyun.oss/aliyun-sdk-oss -->
+		<dependency>
+			<groupId>com.aliyun.oss</groupId>
+			<artifactId>aliyun-sdk-oss</artifactId>
+			<version>2.8.2</version>
+		</dependency>
+
 		<!-- log4j日志 -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
