--- a/medicineInfo_dao/pom.xml
+++ b/medicineInfo_dao/pom.xml
@@ -71,6 +71,18 @@
 						<artifactId>mybatis</artifactId>
 						<version>3.4.2</version>
 					</dependency>
+					<dependency>
+						<groupId>com.github.pagehelper</groupId>
+						<artifactId>pagehelper-spring-boot-starter</artifactId>
+						<version>1.2.5</version>
+					</dependency>
+					<!-- https://mvnrepository.com/artifact/org.mybatis.dynamic-sql/mybatis-dynamic-sql -->
+					<dependency>
+						<groupId>org.mybatis.dynamic-sql</groupId>
+						<artifactId>mybatis-dynamic-sql</artifactId>
+						<version>1.1.0</version>
+					</dependency>
+
 				</dependencies>
 			</plugin>
 		</plugins>
