--- a/medicineInfo_rest/src/main/resources/application.properties
+++ b/medicineInfo_rest/src/main/resources/application.properties
@@ -4,6 +4,7 @@ cors.filter.allowMethods=GET,POST,PUT,DELETE,OPTIONS
 cors.filter.allowCredentials=true
 cors.filter.allowHeaders=Content-Type,X-Token
 cors.filter.exposeHeaders=
-
+spring.http.multipart.maxFileSize=10Mb
+spring.http.multipart.maxRequestSize=10Mb
 
 web.filter.no.token.urls=/tokens,/mission/saveMission
