--- a/medicineInfo_rest/src/main/resources/application.properties
+++ b/medicineInfo_rest/src/main/resources/application.properties
@@ -8,3 +8,9 @@ spring.http.multipart.maxFileSize=10Mb
 spring.http.multipart.maxRequestSize=10Mb
 
 web.filter.no.token.urls=/tokens,/mission/saveMission
+
+
+aliyun.oss.endpoint=
+aliyun.oss.accessKeyId=
+aliyun.oss.accessKeySecret=
+aliyun.oss.securityToken=
