--- a/medicineInfo_common/pom.xml
+++ b/medicineInfo_common/pom.xml
@@ -28,6 +28,11 @@
 			<artifactId>fastjson</artifactId>
 			<version>1.2.47</version>
 		</dependency>
+		<dependency>
+			<groupId>com.aliyun.oss</groupId>
+			<artifactId>aliyun-sdk-oss</artifactId>
+			<version>2.8.3</version>
+		</dependency>
 
 	</dependencies>
 </project>
