--- a/medicineInfo_rest/src/main/resources/application.properties
+++ b/medicineInfo_rest/src/main/resources/application.properties
@@ -10,8 +10,8 @@ spring.http.multipart.maxRequestSize=10Mb
 web.filter.no.token.urls=/tokens,/mission/saveMission
 
 
-aliyun.oss.endpoint=
-aliyun.oss.accessKeyId=
-aliyun.oss.accessKeySecret=
+aliyun.oss.endpoint=oss-cn-beijing.aliyuncs.com
+aliyun.oss.accessKeyId=NOdAcUSQJmiDcc0Y
+aliyun.oss.accessKeySecret=gcskQ7jvaxaLJm4gCSCCwfwExXIcG5
 aliyun.oss.securityToken=
-aliyun.oss.bucketName=
+aliyun.oss.bucketName=miss-img
