--- a/medicineInfo_rest/src/main/resources/log4j.properties
+++ b/medicineInfo_rest/src/main/resources/log4j.properties
@@ -3,6 +3,7 @@ log4j.rootLogger=DEBUG, stdout
 
 # MyBatis logging configuration...
 log4j.logger.cn.com.med.info.mapper.UserMapper=DEBUG
+log4j.logger.cn.com.med.info.mapper.Miss_diseaseMapper=DEBUG
 
 # Console output...
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
