--- a/medicineInfo_rest/src/main/resources/application.properties
+++ b/medicineInfo_rest/src/main/resources/application.properties
@@ -7,7 +7,7 @@ cors.filter.exposeHeaders=
 spring.http.multipart.maxFileSize=10Mb
 spring.http.multipart.maxRequestSize=10Mb
 
-web.filter.no.token.urls=/api/tokens
+web.token.privilege.noTokenUrls[0]=/api/tokens
 
 
 aliyun.oss.endpoint=oss-cn-beijing.aliyuncs.com
