--- a/medicineInfo_rest/src/main/resources/application.yml
+++ b/medicineInfo_rest/src/main/resources/application.yml
@@ -23,7 +23,12 @@ spring:
         testOnReturn: false
         poolPreparedStatements: true
         maxOpenPreparedStatements: 20
-        
+    http:
+        encoding:
+          force: true
+          charset: UTF-8
+          enabled: true
+
 
 ## 该配置节点为独立的节点，有很多同学容易将这个配置放在spring的节点下，导致配置无法被识别
 mybatis:
