--- a/medicineInfo_rest/src/main/resources/application.properties
+++ b/medicineInfo_rest/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.http.multipart.maxRequestSize=10Mb
 
 web.token.privilege.noTokenUrls[0]=/api/tokens
 
-
+token.expire.time=120
 aliyun.oss.endpoint=oss-cn-beijing.aliyuncs.com
 aliyun.oss.accessKeyId=NOdAcUSQJmiDcc0Y
 aliyun.oss.accessKeySecret=gcskQ7jvaxaLJm4gCSCCwfwExXIcG5
