--- a/medicineInfo_rest/src/main/resources/application.yml
+++ b/medicineInfo_rest/src/main/resources/application.yml
@@ -4,9 +4,9 @@ server:
 spring:
     datasource:
         name: test
-        url: jdbc:mysql://39.98.82.89:3306/miss?characterEncoding=UTF-8&autoReconnect=true&zeroDateTimeBehavior=convertToNull&useUnicode=true&useSSL=false
-        username: root
-        password: 123456
+        url: jdbc:mysql://mir.dayi.org.cn:31257/miss_back?characterEncoding=UTF-8&autoReconnect=true&zeroDateTimeBehavior=convertToNull&useUnicode=true&useSSL=false
+        username: miss_back
+        password: GRmZTRc7JFLTA7J5
         # 使用druid数据源
         type: com.alibaba.druid.pool.DruidDataSource
         driver-class-name: com.mysql.jdbc.Driver
